<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".persentation.sholat.SholatFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:background="@color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:id="@+id/ll_filter_sholat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:elevation="10dp"
                android:labelFor="@id/edt_tanggal_sholat"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_tanggal_sholat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat_semibold_600"
                    android:hint="@string/txt_select_date"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_tanggal_sholat_hidden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_autocity"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:hint="@string/txt_select_item"
                android:visibility="gone"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <AutoCompleteTextView
                    android:id="@+id/auto_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold_600"
                    android:inputType="none"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/fm_jadwal_sholat"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_jadwal_sholat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="5"
                        tools:listitem="@layout/item_jadwal_sholat" />

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_rv_sholat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <include layout="@layout/item_jadwal_sholat_shimmer" />
                    </com.facebook.shimmer.ShimmerFrameLayout>
                </FrameLayout>
            </androidx.core.widget.NestedScrollView>

            <ImageView
                android:id="@+id/img_no_data"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_no_data"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>