<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        android:paddingVertical="16dp"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_zakat_dashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="135dp"
                        android:layout_marginVertical="@dimen/activity_margin"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="5dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:padding="@dimen/activity_padding">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/img_zakat_person"
                                android:layout_width="42dp"
                                android:layout_height="42dp"
                                android:src="@drawable/ic_person"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_zakat_jumlah_jiwa"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="16dp"
                                android:fontFamily="@font/montserrat_bold_700"
                                android:textSize="14sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/img_zakat_person"
                                tools:text="@string/app_name" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/montserrat_regular_400"
                                android:text="@string/txt_sum_person"
                                android:textSize="11sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/tv_zakat_jumlah_jiwa"
                                tools:ignore="SmallSp" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="135dp"
                        android:layout_marginVertical="@dimen/activity_margin"
                        android:layout_marginEnd="6dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="5dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:padding="@dimen/activity_padding">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/img_zakat_rice"
                                android:layout_width="42dp"
                                android:layout_height="42dp"
                                android:src="@drawable/ic_rice"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_zakat_rice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="16dp"
                                android:fontFamily="@font/montserrat_bold_700"
                                android:textSize="14sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/img_zakat_rice"
                                tools:text="@string/app_name" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/montserrat_regular_400"
                                android:text="@string/txt_zakat_rice"
                                android:textSize="11sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/tv_zakat_rice"
                                tools:ignore="SmallSp" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="135dp"
                        android:layout_marginVertical="@dimen/activity_margin"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="5dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:padding="@dimen/activity_padding">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/img_zakat_money"
                                android:layout_width="42dp"
                                android:layout_height="42dp"
                                android:src="@drawable/ic_money"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_zakat_money"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="16dp"
                                android:fontFamily="@font/montserrat_bold_700"
                                android:textSize="14sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/img_zakat_money"
                                tools:text="@string/app_name" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/montserrat_regular_400"
                                android:text="@string/txt_zakat_money"
                                android:textSize="11sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/tv_zakat_money"
                                tools:ignore="SmallSp" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="135dp"
                        android:layout_marginVertical="@dimen/activity_margin"
                        android:layout_marginEnd="6dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="5dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:padding="@dimen/activity_padding">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/img_zakat_infaq"
                                android:layout_width="42dp"
                                android:layout_height="42dp"
                                android:src="@drawable/ic_infaq"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_zakat_infak"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="16dp"
                                android:fontFamily="@font/montserrat_bold_700"
                                android:textSize="14sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/img_zakat_infaq"
                                tools:text="@string/app_name" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/montserrat_regular_400"
                                android:text="@string/txt_zakat_infaq"
                                android:textSize="11sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/tv_zakat_infak"
                                tools:ignore="SmallSp" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_zakat_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/montserrat_semibold_600"
                android:text="Histori Terakhir"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_zakat_dashboard"/>

            <TextView
                android:id="@+id/tv_zakat_export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:fontFamily="@font/montserrat_bold_700"
                android:text="Data to Excel"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"
                app:drawableEndCompat="@drawable/ic_import_export"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_zakat_dashboard"/>

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fillViewport="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_zakat_history">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginHorizontal="6dp"
                        android:clipToPadding="false">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_zakat_payment_list"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:itemCount="15"
                            android:layout_marginVertical="16dp"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/item_zakat" />
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_zakat_input"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_circle_btn_primary"
        android:padding="16dp"
        android:src="@drawable/ic_zakat" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>